Alterando categoria e tipo_bebida
